--- a/apollo/package.json
+++ b/apollo/package.json
@@ -8,12 +8,14 @@
     "@babel/runtime": "^7.0.0-beta.36",
     "apollo-client": "^2.2.3",
     "apollo-client-preset": "^1.0.8",
+    "babel-plugin-inline-import": "^2.0.6",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "graphql": "^0.13.0",
     "graphql-server-express": "^1.3.2",
     "graphql-tag": "^2.7.3",
     "graphql-tools": "^2.20.2",
+    "lodash": "^4.17.5",
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
